More units tests and some bug fixes